# stale-issue-closer-agent

./: .env.example  .gitignore  .gitmodules  Makefile  README.md  azure.yaml  pyproject.toml
infra/: main.bicep  write_dot_env.ps1  write_dot_env.sh
src/agent/: github_client.py  graph.py  propose_action_prompt.md.jinja2  research_prompt.md.jinja2  review_template.md.jinja2  staleprompt.md
