
[project]
name = "stale-issue-closer-agent"
version = "0.0.1"
description = "Agent for closing stale GitHub issues"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Pamela Fox" }]
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "langgraph>=0.6.5",
    "python-dotenv>=1.0.1",
    "langgraph-sdk>=0.2.2",
    "langchain-openai>=0.3.30",
    "langchain==1.0.0a5",
    "azure-identity>=1.24.0",
    "httpx>=0.27",
    "jinja2>=3.1.4",
]

[dependency-groups]
dev = [
    "mypy>=1.11.1",
    "ruff>=0.6.1",
    "pytest>=8.3.4",
    "langgraph-cli[inmem]>=0.1.71",
    "pytest>=8.3.5",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agent"]

[tool.setuptools.package-dir]
"agent" = "src/agent"

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"
